Aug 08, 2025
  ncbi-gene-history-loader: implemented parallel processing

Jul 15, 2025
  added transcript qc -- to withdraw transcripts associated with inactive genes
    or transcripts that do not have entries in TRANSCRIPTS table

Mar 22, 2024
  added BulkGeneWithdrawal

Sep 19, 2023
  BulkGeneRename: better qc

Feb 27, 2023
  replaced class Counters with CounterPool from rgdcore

Jan 27, 2023
  updated build.gradle to be gradle 6.x + compatible

Jan 13, 2023
  BulkGeneRename: updated to rename a batch of orf genes from NCBI

Oct 12, 2022
  BulkGeneRename: updated to rename a batch of trna genes

Aug 12, 2022
  BulkGeneRename: implemented dry-run mode

Aug 10, 2022
  gene_history: better conflict reporting

Jul 08, 2022
  BulkGeneRename: parser: added handling of double quotes

Jun 13, 2022
  code cleanup

Jun 10, 2022
  BulkGeneRename: better logging
  BulkGeneMerge: better logging

Jun 03, 2022
  BulkGeneRename: better qc

Jun 02, 2022
  updated BulkGeneMerge
  added BulkGeneRename

Mar 10, 2022
  added log 'aliases'

Dec 16, 2021
  improved logging

Dec 14, 2021
  updated log4j to avoid zero day vulnerability

Aug 26, 2021
  RnaSeqLoader: updated to handle new FTP file structure at NCBI

Mar 09, 2021
  BulkGeneLoader: updated to do bulk merge for rn7 genes

Jan 04, 2021
  fixed NullPointerException in RnaSeqLoader and ProteinSeqLoader

Jul 24, 2020
  moved maintenance module GeneReactivator from legacy 'gene-loading-pipeline'

May 10, 2020
  updated jar dependencies

Jan 09, 2020
  log names for gene history harmonized with other pipeline logs

Feb 18, 2019, v.2.1.8
  sequence loaders: abort if sequence fasta files are not available

Feb 11, 2019, v.2.1.7
  migrated NcbiGeneHistoryLoader and BulkGeneMerger from gene-loading pipeline

Nov 20, 2018, v.2.1.6
  updated code to use new sequence API from rgdcore lib
  rna seq loader: refactored code to significantly speed up the loader

Oct 15, 2018, v.2.1.5
  fixed bug introduced in the previous release
