@@ -23,12 +23,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-dbcp2:2.11.0'
-    implementation 'commons-net:commons-net:3.11.0'
+    implementation ('org.apache.commons:commons-dbcp2:2.12.0') {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
+    implementation 'commons-net:commons-net:3.12.0'
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.24.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.25.0'
     implementation 'com.oracle.database.jdbc:ojdbc11:23.9.0.25.07'
     implementation 'org.springframework:spring-jdbc:6.2.9'
 
